# video-to-text

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.ghcr.yml  docker-compose.yml  pyproject.toml  requirements-docker.txt  requirements.txt  transcribe_diarize.py
.github/workflows/: publish-image.yml
docs/: packaging-phase-plan.md  tech-context.md
tests/: test_pipeline.py  test_settings.py  test_transcription.py
transcribe_diarize_app/: __init__.py  cli.py  constants.py  logging_utils.py  pipeline.py  settings.py  transcription.py
