[project]
name = "transcribe-diarize"
version = "0.1.0"
description = "Transcribe and diarize video files (MP4/MOV) with LLM analysis"
requires-python = ">=3.11"
dependencies = [
    "mlx-whisper",
    "pyannote-audio",
    "torch",
    "torchaudio",
    "huggingface-hub",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "python-dotenv",
    "tqdm>=4.66",
]

[project.scripts]
transcribe = "transcribe_diarize:main"

[tool.pdm]
distribution = false

[tool.pdm.scripts]
transcribe = "python transcribe_diarize.py"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # Pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "ARG", # unused arguments
    "SIM", # simplify
    "PTH", # use pathlib
    "ERA", # eradicate (no commented code)
    "PL",  # Pylint subset
    "RUF", # Ruff-specific
    "S",   # bandit security
    "NPY", # NumPy-specific
]

[tool.ruff.lint.pylint]
max-args = 7
max-statements = 50

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
