[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "transcribe-diarize"
version = "0.4.0"
description = "Transcribe and diarize video files (MP4/MOV) with LLM analysis"
requires-python = ">=3.11"
dependencies = [
    "pyannote-audio",
    "torch<2.6",
    "torchaudio<2.6",
    "huggingface-hub<1.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "python-dotenv",
    "tqdm>=4.66",
    "pydantic>=2.12.5",
    "faster-whisper>=1.2.1",
]

[project.scripts]
transcribe = "transcribe_diarize_app.cli:main"
transcript-diarize = "transcribe_diarize_app.cli:main"

[dependency-groups]
macos = ["mlx-whisper"]
dev = ["ruff>=0.15.6"]
test = ["pytest>=9.0.3"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "ARG",
    "SIM",
    "PTH",
    "ERA",
    "PL",
    "RUF",
    "S",
    "NPY",
]

[tool.ruff.lint.pylint]
max-args = 7
max-statements = 50

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
